HelloWorld/force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <displayFormat>FID-{000000}</displayFormat>
        <label>Flight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>