HelloWorld/force-app/main/default/objects/Flight__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>