HelloWorld/force-app/main/default/objects/Flight__c/fields/Flight_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Flight_Company_Name__c</fullName>
    <label>Flight Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Air India</fullName>
            </value>
            <value>
                <fullName>Go Air</fullName>
            </value>
            <value>
                <fullName>King Fisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>