HelloWorld/force-app/main/default/objects/Flight__c/fields/Flight_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_ID__c</fullName>
    <displayFormat>FID-{000000}</displayFormat>
    <label>Flight ID</label>
    <type>AutoNumber</type>
</CustomField>