HelloWorld/force-app/main/default/objects/Flight__c/validationRules/Flight_number_can_not_start_with_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_number_can_not_start_with_number</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( Flight_Number__c ,&apos;((([A-Z]{2})\\d{4}))&apos;))</errorConditionFormula>
    <errorDisplayField>Flight_Number__c</errorDisplayField>
    <errorMessage>Flight number should be in standard format</errorMessage>
</ValidationRule>