HelloWorld/force-app/main/default/objects/Flight__c/validationRules/Special_symbol_not_allowed_in_Flight_no.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_symbol_not_allowed_in_Flight_no</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(  Flight_Number__c  , &quot;^[a-zA-Z0-9-_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Flight_Number__c</errorDisplayField>
    <errorMessage>Special symbol not allowed in Flight number</errorMessage>
</ValidationRule>