HelloWorld/force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Number__c</columns>
    <columns>Flight_Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>